Resolve vars defined in a more narrow scope
misc: add e2e tests

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -70,3 +70,32 @@ jobs:
       - name: "Run tox for ${{ matrix.python-version }}"
         run: |
           python -m tox
+
+  examples-e2e:
+    name: Run end-to-end tests for examples
+    runs-on: make-argocd-fly
+
+    steps:
+      - uses: actions/checkout@v4
+      - if: ${{ runner.arch == 'arm64' }}
+        name: Set up Python
+        uses: deadsnakes/action@v3.1.0
+        with:
+          python-version: "3.11"
+      - if: ${{ runner.arch == 'amd64' }}
+        name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
+      - name: Lint with flake8
+        run: |
+          python main.py --root-dir examples/app_types
+          if [[ -n $(git status --porcelain examples/app_types/output) ]]; then
+            echo "Unstaged files found in examples/app_types/output. Failing the job."
+            exit 1
+          fi
