--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -94,7 +94,7 @@ jobs:
           if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
       - name: Run end-to-end tests
         run: |
-          python main.py --root-dir examples/app_types --skip-latest-version-check
+          python main.py --root-dir tests/examples/app_types --skip-latest-version-check
           if [[ -n $(git status --porcelain examples/app_types/output) ]]; then
             echo "Unstaged files found in examples/app_types/output. Failing the job."
             exit 1
