--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -152,7 +152,7 @@ jobs:
           if [ -f requirements.dev.txt ]; then pip install -r requirements.dev.txt; fi
       - name: Run end-to-end tests
         run: |
-          python main.py --root-dir tests/manual_deprecated --skip-latest-version-check --loglevel DEBUG
+          python main.py --root-dir tests/manual_deprecated --skip-latest-version-check
           if [[ -n $(git status --porcelain tests/manual_deprecated/output) ]]; then
             echo "Unstaged files found in tests/manual_deprecated/output. Failing the job."
             exit 1
