--- a/tests/manual/source/subdirectory_2/app_8/kustomization.yml
+++ b/tests/manual/source/subdirectory_2/app_8/kustomization.yml
@@ -3,4 +3,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - Deployment_grafana.yml
+  - deployment_grafana.yml
