--- a/tests/examples/app_types/config/config.yml
+++ b/tests/examples/app_types/config/config.yml
@@ -5,6 +5,28 @@ envs:
       02_jinja2_app: {}
       03_kustomize_app: {}
       04_kustomize_helm_app: {}
+      05_app_dir: {}
+      06_helm_app:
+        params:
+          parent_app: 05_app_dir
+        vars:
+          argocd_application_cr_template: |
+            apiVersion: argoproj.io/v1alpha1
+            kind: Application
+            metadata:
+              name: hello-world
+              namespace: argocd
+            spec:
+              project: default
+              source:
+                chart: hello-world
+                repoURL: https://helm.github.io/examples
+                targetRevision: 0.1.0
+                helm:
+                  releaseName: hello-world
+              destination:
+                server: https://kubernetes.default.svc
+                namespace: argocd
 
 vars:
   namespace: kube-default
