--- a/examples/app_types/output/example/00_app_of_apps/application_02-jinja2-app-example.yml
+++ b/examples/app_types/output/example/00_app_of_apps/application_02-jinja2-app-example.yml
@@ -2,16 +2,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: hello-world
+  name: 02-jinja2-app-example
   namespace: argocd
+  finalizers: []
 spec:
   project: default
   source:
-    chart: hello-world
-    repoURL: https://helm.github.io/examples
-    targetRevision: 0.1.0
-    helm:
-      releaseName: hello-world
+    repoURL: https://github.com/my_user/my_repo.git
+    targetRevision: HEAD
+    path: output/example/02_jinja2_app
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
+  syncPolicy: {}
