--- a/examples/monitoring_stack/output/local/bootstrap_parent/application_bootstrap-local.yml
+++ b/examples/monitoring_stack/output/local/bootstrap_parent/application_bootstrap-local.yml
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: https://github.com/Karandash8/make-argocd-fly.git
     targetRevision: 181-add-examples-of-real-world-applications
-    path: output/local/bootstrap
+    path: example/monitoring_stack/output/local/bootstrap
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
