--- a/examples/monitoring_stack/output/local/bootstrap/application_common-local.yml
+++ b/examples/monitoring_stack/output/local/bootstrap/application_common-local.yml
@@ -16,4 +16,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
-  syncPolicy: {}
+  syncPolicy:
+    automated:
+      selfHeal: true
