--- a/examples/monitoring_stack/output/local/bootstrap/application_prometheus-local.yml
+++ b/examples/monitoring_stack/output/local/bootstrap/application_prometheus-local.yml
@@ -14,4 +14,6 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
-  syncPolicy: {}
+  syncPolicy:
+    automated:
+      selfHeal: true
