Fix prometheus volumes

--- a/examples/monitoring_stack/output/local/prometheus/configmap_prometheus-config-template.yml
+++ b/examples/monitoring_stack/output/local/prometheus/configmap_prometheus-config-template.yml
@@ -5,7 +5,7 @@ metadata:
   name: prometheus-config-template
   namespace: monitoring
 data:
-  prometheus.yml.tmpl: |-
+  prometheus.yml: |-
     global:
       scrape_interval: 20s
       scrape_timeout: 15s
