Fix node-exporter name

--- a/examples/monitoring_stack/output/local/node_exporter/service_prometheus-node-exporter.yml
+++ b/examples/monitoring_stack/output/local/node_exporter/service_prometheus-node-exporter.yml
@@ -8,8 +8,8 @@ metadata:
     app.kubernetes.io/component: metrics
     app.kubernetes.io/instance: prometheus-node-exporter
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: prometheus-node-exporter
-    app.kubernetes.io/part-of: prometheus-node-exporter
+    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/part-of: node-exporter
     app.kubernetes.io/version: 1.9.1
     helm.sh/chart: prometheus-node-exporter-4.47.3
   name: prometheus-node-exporter
@@ -22,5 +22,5 @@ spec:
       targetPort: 9100
   selector:
     app.kubernetes.io/instance: prometheus-node-exporter
-    app.kubernetes.io/name: prometheus-node-exporter
+    app.kubernetes.io/name: node-exporter
   type: ClusterIP
