--- a/examples/monitoring_stack/output/local/node_exporter/serviceaccount_prometheus-node-exporter.yml
+++ b/examples/monitoring_stack/output/local/node_exporter/serviceaccount_prometheus-node-exporter.yml
@@ -7,8 +7,8 @@ metadata:
     app.kubernetes.io/component: metrics
     app.kubernetes.io/instance: prometheus-node-exporter
     app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: prometheus-node-exporter
-    app.kubernetes.io/part-of: prometheus-node-exporter
+    app.kubernetes.io/name: node-exporter
+    app.kubernetes.io/part-of: node-exporter
     app.kubernetes.io/version: 1.9.1
     helm.sh/chart: prometheus-node-exporter-4.47.3
   name: prometheus-node-exporter
