--- a/examples/monitoring_stack/output/local/bootstrap/application_common-local.yml
+++ b/examples/monitoring_stack/output/local/bootstrap/application_common-local.yml
@@ -19,3 +19,6 @@ spec:
   syncPolicy:
     automated:
       selfHeal: true
+    syncOptions:
+      - ServerSideApply=true
+      - CreateNamespace=true
