--- a/examples/monitoring_stack/output/local/bootstrap/application_kube-state-metrics-local.yml
+++ b/examples/monitoring_stack/output/local/bootstrap/application_kube-state-metrics-local.yml
@@ -17,3 +17,6 @@ spec:
   syncPolicy:
     automated:
       selfHeal: true
+    syncOptions:
+      - ServerSideApply=true
+      - CreateNamespace=true
