--- a/examples/monitoring_stack/output/local/prometheus/service_prometheus.yml
+++ b/examples/monitoring_stack/output/local/prometheus/service_prometheus.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: prometheus-1
+  name: prometheus
   namespace: monitoring
   labels:
     k8s-app: prometheus
@@ -17,5 +17,5 @@ spec:
       targetPort: 9090
   sessionAffinity: ClientIP
   selector:
-    statefulset.kubernetes.io/pod-name: prometheus-1
+    k8s-app: prometheus
   type: ClusterIP
