--- a/examples/monitoring_stack/config/config.yml
+++ b/examples/monitoring_stack/config/config.yml
@@ -15,6 +15,7 @@ envs:
       kube_state_metrics: {}
       node_exporter: {}
       grafana: {}
+      alertmanager: {}
     params:
       parent_app: bootstrap
 vars:
@@ -37,6 +38,7 @@ vars:
     prometheus_n_replicas: 2
     prometheus_version: 3.4.1
     alertmanager_n_replicas: 2
+    alertmanager_version: 0.28.1
     kube_state_metrics_version: 2.15.0
     node_exporter_version: 4.47.3
     grafana_version: 12.0.2
