--- a/examples/monitoring_stack/output/local/alertmanager/configmap_alertmanager.yml
+++ b/examples/monitoring_stack/output/local/alertmanager/configmap_alertmanager.yml
@@ -17,6 +17,6 @@ data:
       group_wait: 30s
       group_interval: 1m
       repeat_interval: 5h
-      receiver: "telegram"
+      receiver: ""
 
     receivers: []
