--- a/examples/monitoring_stack/source/alertmanager/files/alertmanager-config.yml
+++ b/examples/monitoring_stack/source/alertmanager/files/alertmanager-config.yml
@@ -9,6 +9,10 @@ route:
   group_wait: 30s
   group_interval: 1m
   repeat_interval: 5h
-  receiver: ""
+  receiver: "default-email"
 
-receivers: []
+receivers:
+  - name: 'default-email'
+    email_configs:
+      - to: 'example@domain.com'
+        require_tls: false
