Fix alertmanater receiver

--- a/examples/monitoring_stack/output/local/alertmanager/configmap_alertmanager.yml
+++ b/examples/monitoring_stack/output/local/alertmanager/configmap_alertmanager.yml
@@ -8,6 +8,9 @@ data:
   config.yml: |-
     global:
       resolve_timeout: 5m
+      smtp_smarthost: 'smtpserver:25'
+      smtp_from: 'alertmanager@domain.com'
+      smtp_require_tls: false
 
     templates:
       - '/etc/alertmanager-templates/*.tmpl'
@@ -22,5 +25,5 @@ data:
     receivers:
       - name: 'default-email'
         email_configs:
-          - to: 'example@domain.com'
+          - to: 'alertmanager@domain.com'
             require_tls: false
