--- a/examples/monitoring_stack/output/local/bootstrap/application_common-local.yml
+++ b/examples/monitoring_stack/output/local/bootstrap/application_common-local.yml
@@ -10,9 +10,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/Karandash8/make-argocd-fly.git
-    targetRevision: 181-add-examples-of-real-world-applications
-    path: examples/monitoring_stack/output/local/common
+    repoURL: YOUR_GIT_REPO_URL
+    targetRevision: HEAD
+    path: output/local/common
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
