--- a/examples/monitoring_stack/output/local/bootstrap/application_prometheus-local.yml
+++ b/examples/monitoring_stack/output/local/bootstrap/application_prometheus-local.yml
@@ -8,9 +8,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/Karandash8/make-argocd-fly.git
-    targetRevision: 181-add-examples-of-real-world-applications
-    path: examples/monitoring_stack/output/local/prometheus
+    repoURL: YOUR_GIT_REPO_URL
+    targetRevision: HEAD
+    path: output/local/prometheus
   destination:
     server: https://kubernetes.default.svc
     namespace: argocd
