--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,13 +1,13 @@
-setuptools==78.1.0
-setuptools-scm==8.2.0
-build==1.2.2.post1
-twine==6.1.0
-pytest==8.3.5
-pytest-asyncio==0.26.0
-pytest-cov==6.0.0
-pytest-mock==3.14.0
+setuptools==80.9.0
+setuptools-scm==9.2.2
+build==1.3.0
+twine==6.2.0
+pytest==8.4.2
+pytest-asyncio==1.2.0
+pytest-cov==7.0.0
+pytest-mock==3.15.1
 yelp-gprof2dot==1.2.0
-flake8==7.2.0
-tox==4.25.0
-tox-gh-actions==3.3.0
+flake8==7.3.0
+tox==4.31.0
+tox-gh-actions==3.5.0
 
