Improve output filename generation logic
misc: remove regex based filename components extraction
misc: centralize filename generation logic in a single stage
misc: add pattern driven filename generation
misc: update tests

--- a/examples/monitoring_stack/config/k8s_apps.yml
+++ b/examples/monitoring_stack/config/k8s_apps.yml
@@ -2,11 +2,11 @@ envs:
   local:
     apps:
       k8s/common: {}
-      k8s/prometheus: {}
+      k8s/prometheus: {params: {exclude_rendering: ['files']}}
       k8s/kube_state_metrics: {}
       k8s/node_exporter: {}
-      k8s/grafana: {}
-      k8s/alertmanager: {}
+      k8s/grafana: {params: {exclude_rendering: ['files']}}
+      k8s/alertmanager: {params: {exclude_rendering: ['files']}}
 vars:
   monitoring:
     namespace: kube-monitoring
